--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.20.2
-scikit-learn==0.24.2
-streamlit==0.82.0
-yfinance==0.1.59
-tensorflow==2.5.0
+numpy
+scikit-learn
+streamlit
+yfinance
+tensorflow
 plotly
 
 
